public/css/finallayout.css
/* ... */
.col-1 {
  flex-basis: 50%;
}
.col-2 {
  flex-basis: 20%;
}
.col-3 {
  flex-basis: 20%;
}
.col-4 {
  flex-basis: 10%;
}


/* MY PAPERS END */

/* FUNCTIONS CARD END */



  @media (max-width: 768px) {

    .profileCard {
      background: rgba(255, 255, 255, 0.7);
      width: 100%;
      padding-top: 0px;
      padding-bottom: 0px;
      height: fit-content;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: space-evenly;
    }

    .modal-content {
      width: 80%;
    }
    .addtinfoCard {
      display: none;
    }

    .placeholderPic {
      display: flex;
      justify-content: center;
      width: 100%;
      padding-top: 60px;
      align-items: center;
    }

    .userName, .fullNameBlock {
      padding-top: 15px;
    }

    .profDown {
      display: block;
      padding-top: 10px;
    }

    .changePwBlock, .colEmailBlock{
      display: none;
    }

    #profView:checked ~ .changePwBlock,
    #profView:checked ~ .colEmailBlock{
      display: flex;
    }
     .userFunctionsCard {
    background-color: #f1f1f1;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    }

    /* FUNCTIONS CARD START */

    .container {
      margin: 20px 0;
    }

    .content {
      height: 100%;
      display: flex;
      justify-content: space-between;
      flex-direction: column;
    }

    .content .text-content {
      width: 100%;
      height: 100%;
      padding-top: 30px;
  }

    .content .text-content .add, 
    .content .text-content .mypaper, 
    .content .text-content .bookmark {
      padding: 20px;
    }

    .content .list {
      width: 100%;
      display: flex;
      flex-direction: row;
      position: relative;
    }

    .content .list .title{
      display: none;
    }

    .content .list label {
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;
      height: 60px;
      font-size: 22px;
      font-weight: 500;
      line-height: 60px;
      cursor: pointer;
      padding-left: 0px;
      transition: all 0.5s ease;
      color: #333;
      z-index: 12;
    }

    .content .slider{
      position: absolute;
      left: 0;
      top: 0;
      height: 60px;
      width: 30%;
      border-radius: 12px;
      background: #c71f37;
      transition: all 0.4s ease;
    }
    
    #add:checked ~ .list .slider{
      left: 10px;
    }
    
    #mypaper:checked ~ .list .slider{
      left: 35%;
    }
    
    #bookmark:checked ~ .list .slider{
      left: 68%;
    }

    #add:checked ~ .list .slider, 
    #mypaper:checked ~ .list .slider, 
    #bookmark:checked ~ .list .slider{
      top: 0;
    }

    /* MY PAPERS START */

    .paperCont, .bookmarkCont {
      height: 65vh;
      width: 100%;

      overflow: auto;
    }

    .tableHeader {
      display: none;
    }
  
    .tablepaperInfo{
      display: block;
    }
  
    .col {
      display: flex;
      padding: 10px 0;
      flex-basis: 100%;
    }
  
    .col::before {
      color: #c71f37;
      padding-right: 10px;
      content: attr(data-label);;
      text-align: right;
    }

    /* MY PAPERS END */

    /* FUNCTIONS CARD END */

  }

/* USER DASHBOARD END */

/* HOMEPAGE START */

.homeCont {
  background-image: url("../img/SUDRbg2.jpg");
  background-attachment: fixed;
  background-size: cover;
  background-position: center;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.searchbarCont {
  width: 100%;
  height: 10vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.searchHeading {
  text-align: center;
  padding: 5px;
}

.searchForm {
  display: flex;
  width: 70%;
  padding: 20px;
}

.searchForm input[type=text] {
  display: block;
  padding: 10px;
  font-size: 17px;
  border: 1px solid #c71f37;
  border-top-left-radius: 50px;
  border-bottom-left-radius: 50px;
  float: left;
  width: 80%;
  background: #f1f1f1;
  font-family: montserrat;
}

.searchForm button {
  float: left;
  width: 20%;
  padding: 10px;
  background: #c71f37;
  border-top-right-radius: 50px;
  border-bottom-right-radius: 50px;
  color: white;
  font-size: 17px;
  border: 1px solid #c71f37;
  border-left: none;
  cursor: pointer;
}

.categoryCont {
  width: 100%;
  height: 50vh;
  background: linear-gradient(to bottom, rgb(255, 255, 255), rgba(255, 255, 255, 0));
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.catWrapper {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  flex-direction: row;
}

.catBlock {
  width: 20%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.card-outer { 
  background: #c71f37;
  text-align: center;
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
              0px 1px 1px 0px rgba(0, 0, 0, 0.14),
              0px 1px 3px 0px rgba(0, 0, 0, .12);
}

.card-inner {
  background: #fff;
  border: 2px solid #c71f37;
  padding: 1rem 1rem;
  display: block;
  color: #c71f37;
  text-decoration: none;
  transition: transform .07s ease-out;
}

.card-outer:hover .card-inner {
  transform: translate(-10px, -10px);
}

.infoHeading {
  width: 90%; 
  text-align: center; 
  border-bottom: 1px solid #000; 
  line-height: 0.1em;
  margin: 10px 0 20px; 
} 

.infoHeading span { 
   background: #f1f1f1; 
   padding:0 10px; 
}

.infoCont {
  width: 95%;
  min-height: fit-content;
  display: flex;
  justify-content: space-around;
}

.contactCard, .aboutCard {
  width: 45%;
  height: 40vh;
  display: flex;
  border: 1px solid #2b2b2b;
  background-color: #f1f1f1;
  box-shadow: 8px 8px #c71f37;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.aboutCont {
  width: 100%;
  height: 50vh;
  display: flex;
  background: #f1f1f1;
  justify-content: space-evenly;
  align-items: center;
  min-height: fit-content;
  flex-direction: column;
}
/* ... */

